gen/rules/angularParser.java
// Generated from /home/nabil_al-hamza/IdeaProjects/angular-compiler/src/rules/angularParser.g4 by ANTLR 4.13.1
package rules;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class angularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, FOR=3, DO=4, WHILE=5, FUNCTION=6, RETURN=7, TYPE=8, VARIABLE_TYPE=9, 
		ACCESS_TYPE=10, NEW=11, IMPORT=12, EXPORT=13, COMPONENT=14, FROM=15, THIS=16, 
		CLASS1=17, DASH=18, BOOLEAN=19, INTERFACE=20, EXTEND=21, IMPLEMENT=22, 
		AD=23, PLUS=24, TIMES=25, DIVIDE=26, EQUAL=27, GREATER=28, GREATER_EQUAL=29, 
		FIRST_TAG=30, LESS_EQUAL=31, INCREMENT=32, DECREMENT=33, PLUS_EQUAL=34, 
		MINUS_EQUAL=35, MUL_ASSIGN=36, DIV_ASSIGN=37, MOD_ASSIGN=38, LPAREN=39, 
		RPAREN=40, LBRACKET=41, RBRACKET=42, LBRACE=43, RBRACE=44, SEMICOLON=45, 
		COMMA=46, COLON=47, DOT=48, OR=49, ARROW=50, BACKTICK=51, AND=52, EQUAL_EQUAL=53, 
		NOT_EQUAL=54, IDENTIFIER=55, NUMBER=56, STRING=57, WHITESPACE=58, COMMENT=59, 
		BLOCK_COMMENT=60, SCRIPT=61, SRC=62, IMG=63, DIRECTIVE_NAME=64, TAGS=65, 
		STANDARD_ATTRIBUTE=66, STANDARD_EVENT=67, OPEN_COMMENT=68, CLOSE_COMMENT=69, 
		SLASH=70, TAG_CLOSE=71, SELF_CLOSING_TAG_CLOSE=72, CLOSING_TAG_CLOSE=73, 
		ATTRIBUTE_VALUE=74, OPEN_TS=75, CLOSE_TS=76, OPEN_PAREN=77, CLOSE_PAREN=78, 
		OPEN_SQUARE_TAG=79, CLOSE_SQUARE_TAG=80, HASHTAG=81, ELSEH=82, EQUALH=83, 
		ANGULAR_EVENT=84, STANDARD_PROP=85, OPEN_TAG=86, ATTRIBUTE_NAME=87, ID=88, 
		STRING_LITERAL=89, TEXT=90, WS=91, BACKTICK1=92, UNDEFINED=93, NULL=94;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatement = 2, RULE_interfaceDeclaration = 3, 
		RULE_interfaceBody = 4, RULE_componentDeclaration = 5, RULE_componentConfig = 6, 
		RULE_propertyAssignment = 7, RULE_propertyValue = 8, RULE_htmlElement = 9, 
		RULE_elements = 10, RULE_tagStatement = 11, RULE_imgTag = 12, RULE_comment = 13, 
		RULE_attribute = 14, RULE_attributeValue = 15, RULE_classDeclaration = 16, 
		RULE_listStatement = 17, RULE_arrayExpression = 18, RULE_objectExpressionList = 19, 
		RULE_objectExpression = 20, RULE_propertyList = 21, RULE_property = 22, 
		RULE_property_declaration = 23, RULE_type = 24, RULE_forDeclaration = 25, 
		RULE_bodyFor = 26, RULE_single_type = 27, RULE_arrayLiteral = 28, RULE_eventBinding = 29, 
		RULE_interpolation = 30, RULE_propertyBinding = 31, RULE_valueExpression = 32, 
		RULE_literal = 33, RULE_propertyDeclaration = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatement", "interfaceDeclaration", "interfaceBody", 
			"componentDeclaration", "componentConfig", "propertyAssignment", "propertyValue", 
			"htmlElement", "elements", "tagStatement", "imgTag", "comment", "attribute", 
			"attributeValue", "classDeclaration", "listStatement", "arrayExpression", 
			"objectExpressionList", "objectExpression", "propertyList", "property", 
			"property_declaration", "type", "forDeclaration", "bodyFor", "single_type", 
			"arrayLiteral", "eventBinding", "interpolation", "propertyBinding", "valueExpression", 
			"literal", "propertyDeclaration"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", null, "'for'", "'do'", "'while'", "'function'", "'return'", 
			null, null, null, "'new'", "'import'", "'export'", "'component'", "'from'", 
			"'this'", null, "'-'", null, "'interface'", "'extends'", "'implement'", 
			"'@'", "'+'", "'*'", null, null, null, "'>='", null, "'<='", "'++'", 
			"'--'", "'+='", "'-='", "'*='", "'/='", "'%='", null, null, null, null, 
			null, null, "';'", "','", "':'", "'.'", "'|'", "'=>'", "'`<div'", "'&&'", 
			"'=='", "'!='", null, null, null, null, null, null, "'script'", "'src'", 
			"'img'", null, null, null, null, "'<!--'", "'-->'", null, null, "'/>'", 
			"'</'", null, "'{{'", "'}}'", null, null, null, null, "'#'", null, null, 
			null, null, null, null, null, null, null, null, "'div>`'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "FOR", "DO", "WHILE", "FUNCTION", "RETURN", "TYPE", 
			"VARIABLE_TYPE", "ACCESS_TYPE", "NEW", "IMPORT", "EXPORT", "COMPONENT", 
			"FROM", "THIS", "CLASS1", "DASH", "BOOLEAN", "INTERFACE", "EXTEND", "IMPLEMENT", 
			"AD", "PLUS", "TIMES", "DIVIDE", "EQUAL", "GREATER", "GREATER_EQUAL", 
			"FIRST_TAG", "LESS_EQUAL", "INCREMENT", "DECREMENT", "PLUS_EQUAL", "MINUS_EQUAL", 
			"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "LPAREN", "RPAREN", "LBRACKET", 
			"RBRACKET", "LBRACE", "RBRACE", "SEMICOLON", "COMMA", "COLON", "DOT", 
			"OR", "ARROW", "BACKTICK", "AND", "EQUAL_EQUAL", "NOT_EQUAL", "IDENTIFIER", 
			"NUMBER", "STRING", "WHITESPACE", "COMMENT", "BLOCK_COMMENT", "SCRIPT", 
			"SRC", "IMG", "DIRECTIVE_NAME", "TAGS", "STANDARD_ATTRIBUTE", "STANDARD_EVENT", 
			"OPEN_COMMENT", "CLOSE_COMMENT", "SLASH", "TAG_CLOSE", "SELF_CLOSING_TAG_CLOSE", 
			"CLOSING_TAG_CLOSE", "ATTRIBUTE_VALUE", "OPEN_TS", "CLOSE_TS", "OPEN_PAREN", 
			"CLOSE_PAREN", "OPEN_SQUARE_TAG", "CLOSE_SQUARE_TAG", "HASHTAG", "ELSEH", 
			"EQUALH", "ANGULAR_EVENT", "STANDARD_PROP", "OPEN_TAG", "ATTRIBUTE_NAME", 
			"ID", "STRING_LITERAL", "TEXT", "WS", "BACKTICK1", "UNDEFINED", "NULL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "angularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public angularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(angularParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(70);
				statement();
				}
				}
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public ComponentDeclarationContext componentDeclaration() {
			return getRuleContext(ComponentDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<InterfaceDeclarationContext> interfaceDeclaration() {
			return getRuleContexts(InterfaceDeclarationContext.class);
		}
		public InterfaceDeclarationContext interfaceDeclaration(int i) {
			return getRuleContext(InterfaceDeclarationContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(77);
				importStatement();
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTERFACE) {
				{
				{
				setState(82);
				interfaceDeclaration();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			componentDeclaration();
			setState(89);
			classDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(angularParser.IMPORT, 0); }
		public TerminalNode FROM() { return getToken(angularParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(angularParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(angularParser.SEMICOLON, 0); }
		public TerminalNode LBRACE() { return getToken(angularParser.LBRACE, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(angularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(angularParser.IDENTIFIER, i);
		}
		public TerminalNode RBRACE() { return getToken(angularParser.RBRACE, 0); }
		public TerminalNode TIMES() { return getToken(angularParser.TIMES, 0); }
		public List<TerminalNode> COMMA() { return getTokens(angularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(angularParser.COMMA, i);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(IMPORT);
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRACE:
				{
				setState(92);
				match(LBRACE);
				setState(93);
				match(IDENTIFIER);
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(94);
						match(COMMA);
						setState(95);
						match(IDENTIFIER);
						}
						} 
					}
					setState(100);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				}
				setState(102);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(101);
					match(COMMA);
					}
				}

				setState(104);
				match(RBRACE);
				}
				break;
			case TIMES:
				{
				setState(105);
				match(TIMES);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(108);
			match(FROM);
			setState(109);
			match(STRING);
			setState(110);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public TerminalNode INTERFACE() { return getToken(angularParser.INTERFACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(angularParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(angularParser.LBRACE, 0); }
		public InterfaceBodyContext interfaceBody() {
			return getRuleContext(InterfaceBodyContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(angularParser.RBRACE, 0); }
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterInterfaceDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitInterfaceDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitInterfaceDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_interfaceDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(INTERFACE);
			setState(113);
			match(IDENTIFIER);
			setState(114);
			match(LBRACE);
			setState(115);
			interfaceBody();
			setState(116);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceBodyContext extends ParserRuleContext {
		public List<PropertyDeclarationContext> propertyDeclaration() {
			return getRuleContexts(PropertyDeclarationContext.class);
		}
		public PropertyDeclarationContext propertyDeclaration(int i) {
			return getRuleContext(PropertyDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(angularParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(angularParser.SEMICOLON, i);
		}
		public InterfaceBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterInterfaceBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitInterfaceBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitInterfaceBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceBodyContext interfaceBody() throws RecognitionException {
		InterfaceBodyContext _localctx = new InterfaceBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_interfaceBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(118);
				propertyDeclaration();
				setState(119);
				match(SEMICOLON);
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDeclarationContext extends ParserRuleContext {
		public TerminalNode AD() { return getToken(angularParser.AD, 0); }
		public TerminalNode COMPONENT() { return getToken(angularParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(angularParser.LPAREN, 0); }
		public ComponentConfigContext componentConfig() {
			return getRuleContext(ComponentConfigContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(angularParser.RPAREN, 0); }
		public ComponentDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterComponentDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitComponentDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitComponentDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDeclarationContext componentDeclaration() throws RecognitionException {
		ComponentDeclarationContext _localctx = new ComponentDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_componentDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(AD);
			setState(127);
			match(COMPONENT);
			setState(128);
			match(LPAREN);
			setState(129);
			componentConfig();
			setState(130);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentConfigContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(angularParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(angularParser.RBRACE, 0); }
		public List<PropertyAssignmentContext> propertyAssignment() {
			return getRuleContexts(PropertyAssignmentContext.class);
		}
		public PropertyAssignmentContext propertyAssignment(int i) {
			return getRuleContext(PropertyAssignmentContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(angularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(angularParser.COMMA, i);
		}
		public ComponentConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentConfig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterComponentConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitComponentConfig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitComponentConfig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentConfigContext componentConfig() throws RecognitionException {
		ComponentConfigContext _localctx = new ComponentConfigContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_componentConfig);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(LBRACE);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(133);
				propertyAssignment();
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(134);
					match(COMMA);
					setState(135);
					propertyAssignment();
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(143);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyAssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(angularParser.IDENTIFIER, 0); }
		public TerminalNode COLON() { return getToken(angularParser.COLON, 0); }
		public PropertyValueContext propertyValue() {
			return getRuleContext(PropertyValueContext.class,0);
		}
		public PropertyAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterPropertyAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitPropertyAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitPropertyAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyAssignmentContext propertyAssignment() throws RecognitionException {
		PropertyAssignmentContext _localctx = new PropertyAssignmentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_propertyAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(IDENTIFIER);
			setState(146);
			match(COLON);
			setState(147);
			propertyValue();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PropertyValueContext extends ParserRuleContext {
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ArrayLiteralContext arrayLiteral() {
			return getRuleContext(ArrayLiteralContext.class,0);
		}
		public HtmlElementContext htmlElement() {
			return getRuleContext(HtmlElementContext.class,0);
		}
		public PropertyValueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_propertyValue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).enterPropertyValue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof angularParserListener ) ((angularParserListener)listener).exitPropertyValue(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof angularParserVisitor ) return ((angularParserVisitor<? extends T>)visitor).visitPropertyValue(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyValueContext propertyValue() throws RecognitionException {
		PropertyValueContext _localctx = new PropertyValueContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_propertyValue);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				literal();
				}
				break;
			case LBRACKET:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				arrayLiteral();
				}
				break;
			case BACKTICK:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				htmlElement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
